--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ body {
 p { 
     color: #CCCCCC;
     margin: 2em;
+    text-align: center;
     
 }
 
@@ -33,7 +34,7 @@ p {
     height: 100px;
     width: 100px;
     display: block;
-    margin: 0 auto;
+    margin: auto;
 }
 
 .instagram {
@@ -49,15 +50,16 @@ p {
     width: 50px;
     display: block;
     margin: auto;
-    
-    
+       
 }
 
 .email {
     height: 40px;
     width: 40px;
     display: block;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .box {
