--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,8 @@ body {
 }
 
 .instagram {
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
     display: block;
     margin: auto;
     padding-top: 1em;
@@ -49,16 +49,16 @@ body {
 }
 
 .github {
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     display: block;
     margin: auto;
        
 }
 
 .email {
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
     display: block;
     margin: auto;
     padding-top: 1em;
@@ -89,5 +89,14 @@ h1 {
     margin: 1.5em;
     
 
+}
+
+.grid {
+    margin: 2em;
+    
+}
+
+.photo-two {
+    margin: 10em;
     
 }
