--- a/css/main.css
+++ b/css/main.css
@@ -21,20 +21,26 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: "Mr Eaves XL Mod OT", Sans-serif
-    
+    font-family: "Mr Eaves XL Mod OT", Sans-serif;
 }
 
 .about { 
     color: #CCCCCC;
-    margin: 2em;
+    margin-left: 7em;
+    margin-right: 7em;
+    margin: 3em;
     text-align: center;
+}    
     
+.logo {
+    height: 100px;
+    width: 100px;
+    display: block;
+    margin: auto;
 }
 
-.logo {
-    height: 80px;
-    width: 80px;
+.name {
+    width: 90%;
     display: block;
     margin: auto;
 }
@@ -45,7 +51,6 @@ body {
     display: block;
     margin: auto;
     padding-top: 1em;
-    
 }
 
 .github {
@@ -53,7 +58,6 @@ body {
     width: 60px;
     display: block;
     margin: auto;
-       
 }
 
 .email {
@@ -62,7 +66,6 @@ body {
     display: block;
     margin: auto;
     padding-top: 1em;
-
 }
 
 .box {
@@ -74,29 +77,28 @@ body {
 .grid {
     list-style: none;
     padding-top: 3em;
-    
-}
-
-p {
-    margin-left: 4em;
-    margin: 3em;
-    color: #6D6E71;
-    
-    
 }
 
 h1 {
-    margin: 1.5em;
-    
-
+    font-size: 2em;
+    margin: 0 auto;
+    display: block;
 }
 
-.grid {
-    margin: 2em;
-    
+p {
+    color: #CCCCCC;
+    font-family: "Mr Eaves XL Mod OT", Sans-serif;
+    font-size: .75em;
 }
 
-.photo-two {
-    margin: 10em;
-    
+.photo {
+    margin: 5em;
+}
+
+.photo-bottom {
+    margin-top: 3em;
+}
+
+footer {
+    margin-left: 1em;
 }
