--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,7 @@ body {
     display: block;
     margin: auto;
     padding-top: 1em;
+
 }
 
 .box {
@@ -77,12 +78,11 @@ body {
 .grid {
     list-style: none;
     padding-top: 3em;
+    
 }
 
-h1 {
-    font-size: 2em;
-    margin: 0 auto;
-    display: block;
+h1 { 
+    font-size: 1.5em;
 }
 
 p {
@@ -92,13 +92,34 @@ p {
 }
 
 .photo {
-    margin: 5em;
+    margin: 1em;
 }
 
 .photo-bottom {
     margin-top: 3em;
+    
 }
 
 footer {
     margin-left: 1em;
+    
 }
+
+@media only screen and (min-width:34em) {
+    .photo {
+        margin: 5em;
+    }
+    
+    h1 {
+        font-size: 2em;
+
+    
+@media only screen and (min-width:60em) {
+    .photo {
+        margin: 10em;
+    }
+    
+    h1 {
+        font-size: 5em;
+        
+    }
