--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ h1 {
 p {
     color: #CCCCCC;
     font-family: "Mr Eaves XL Mod OT", Sans-serif;
-    font-size: .75em;
+    font-size: 1.5em;
 }
 
 .photo {
